--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         }
     }
 
-    const characterImages = ['shaoran_web.PNG', 'yuii_web.PNG', 'janome.PNG'];
+    const characterImages = ['shaoran_web.PNG', 'yuii_web.PNG', 'janome..PNG'];
     const floatingCharsContainer = document.getElementById('floating-chars-container');
     let currentlyDisplayedCharSrcs = new Set(); // ★★★ 表示中のキャラクターのsrcを管理 ★★★
     const MAX_FLOATING_CHARS = 3; // ★★★ 同時表示されるキャラクターの最大数 ★★★
