--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         }
     }
 
-    const characterImageFiles = ['shaoran_web.PNG', 'yuii_web.PNG', 'janome.PNG']; // 画像ファイル名リスト
+    const characterImageFiles = ['shaoran_web.PNG', 'yuii_web.PNG', 'janome..PNG']; // 画像ファイル名リスト
     const floatingCharsContainer = document.getElementById('floating-chars-container');
     let currentlyDisplayedCharSources = new Set(); // 表示中のキャラクターのsrcを管理
     const MAX_FLOATING_CHARS = 3; // 同時表示最大数
